' https://plantuml.com/de/class-diagram
@startuml Overview
title DiMAS Overview
'skinparam Style strictuml
'skinparam classAttributeIconSize 0

' Application
object program as "async runtime 'Tokio'" {
    [dimas::main]
    main()
}
program -- "*" Agent

' System
interface System
System *-- "*" Component : components >
System *-- "1" Configuration : configuration >
System *-- "*" Connection : connections >

' Agent
class Agent
Agent --|> System

' Component
interface Component
Component o-- "1" Configuration : configuration >

' Configuration
interface Configuration
Configuration *-- "*" Configuration : configurations >

' Connection
interface Connection

@enduml
